# TFHEpp

AEShomo/: CMakeLists.txt
AEShomo/homo/: CMakeLists.txt  README.md  dec  dec.cpp  dec_homo.cpp  enc.cpp  enc_homo.cpp
